basic layout added

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,171 @@
   <meta charset="utf-8">
   <title>AngularHomework</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<!-- starts static markup -->
+  <div class="container">
+    <header class="header bg-light">
+      <div class="row">
+      <h1 id="logo" class="col-sm-3">
+        <a href=""><img src="assets/images/logo.png" alt="logo"> </a>
+      </h1>
+      <div class="col-sm-9">
+        <div class="float-right">
+          User login
+          <button class="btn"><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</button>
+        </div>
+      </div>
+    </div>
+    </header>
+    <main>
+      <h1>Coursers</h1>
+      <div class="row">
+        <form action="" class="form-search col-sm-9">
+          <input type="text" placeholder="Name, etc">
+          <button class="btn btn-secondary"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+        </form>
+        <div class="float-right">
+          <button class="btn"><i class="fa fa-plus" aria-hidden="true"></i> Add course</button>
+        </div>
+      </div>
+      <div class="row">
+        <ul class="list">
+          <li class="list__item">
+            <div class="list__block">
+              <div class="row">
+                <div class="col-sm-6">
+                  <h3>Video Course 1</h3>
+                </div>
+                <div class="col-sm-4">
+                  <time>1h 28min</time>
+                  <span class="date">05.29.2018</span>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-full"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit</button>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-10">
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-full"><i class="fa fa-trash" aria-hidden="true"></i>  Delete</button>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list__item">
+            <div class="list__block">
+              <div class="row">
+                <div class="col-sm-6">
+                  <h3>Video Course 1</h3>
+                </div>
+                <div class="col-sm-4">
+                  <time>1h 28min</time>
+                  <span class="date">05.29.2018</span>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-full"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit</button>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-10">
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-full"><i class="fa fa-trash" aria-hidden="true"></i>  Delete</button>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list__item">
+            <div class="list__block">
+              <div class="row">
+                <div class="col-sm-6">
+                  <h3>Video Course 1</h3>
+                </div>
+                <div class="col-sm-4">
+                  <time>1h 28min</time>
+                  <span class="date">05.29.2018</span>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-full"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit</button>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-10">
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-full"><i class="fa fa-trash" aria-hidden="true"></i>  Delete</button>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list__item">
+            <div class="list__block">
+              <div class="row">
+                <div class="col-sm-6">
+                  <h3>Video Course 1</h3>
+                </div>
+                <div class="col-sm-4">
+                  <time>1h 28min</time>
+                  <span class="date">05.29.2018</span>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-full"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit</button>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-10">
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-full"><i class="fa fa-trash" aria-hidden="true"></i>  Delete</button>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="list__item">
+            <div class="list__block">
+              <div class="row">
+                <div class="col-sm-6">
+                  <h3>Video Course 1</h3>
+                </div>
+                <div class="col-sm-4">
+                  <time>1h 28min</time>
+                  <span class="date">05.29.2018</span>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-full"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit</button>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-10">
+                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-full"><i class="fa fa-trash" aria-hidden="true"></i>  Delete</button>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <button class="btn btn-full"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
+      </div>
+    </main>
+    <footer class="footer bg-dark">
+      <div class="row">
+        <div class="col-sm-12">
+          <p>Copyright @VD</p>
+        </div>
+      </div>
+    </footer>
+  </div>
+<!--eneds static markup -->
+<app-root></app-root>
 </body>
 </html>
